--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.5.0
-backports.zoneinfo==0.2.1
 Brotli==1.0.9
 certifi==2021.10.8
 cffi==1.15.0
@@ -10,6 +9,7 @@ Django
 django-allauth==0.49.0
 django-appconf==1.0.5
 django-crispy-forms==1.14.0
+django-jet-reboot==1.3.1
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
@@ -19,6 +19,8 @@ python-decouple==3.6
 python3-openid==3.2.0
 requests==2.27.1
 requests-oauthlib==1.3.1
+sgmllib3k==1.0.0
+six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.8
 whitenoise==6.0.0
